--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "wetube",
   "version": "1.0.0",
   "description": "Cloning Youbute with Vanilla and NodeJS",
+  "author": "Donghwan Seo",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Donghwan Seo",
   "dependencies": {
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
     "express": "^4.16.4"
   }
 }
