--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
+    "helmet": "^3.15.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
