--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Donghwan Seo",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js --delay 2",
+    "start": "nodemon --exec babel-node init.js --delay 2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
