--- a/package.json
+++ b/package.json
@@ -5,29 +5,39 @@
   "author": "Donghwan Seo",
   "main": "index.js",
   "license": "MIT",
-  "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "dependencies": {
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.2.0",
+    "autoprefixer": "^9.4.3",
+    "babel-loader": "^8.0.4",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^2.0.2",
     "dotenv": "^6.2.0",
-    "eslint-config-prettier": "^3.3.0",
     "express": "^4.16.4",
-    "global": "^4.3.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.15.0",
     "mongoose": "^5.4.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "pug": "^2.0.3"
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "pug": "^2.0.3",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2"
+  },
+  "scripts": {
+    "dev:server": "nodemon --exec babel-node init.js --delay 2",
+    "dev:assets": "webpack -w",
+    "build:assets": "webpack"
   },
   "devDependencies": {
     "eslint": "^5.11.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.0",
     "nodemon": "^1.18.9",
